fix page jump

--- a/src/main/resources/details.css
+++ b/src/main/resources/details.css
@@ -18,12 +18,13 @@
     -fx-background-insets: 0 0 5px 5px;
     -fx-border-width: 0 1px 0 0;
     -fx-border-color: #757575;
-    -fx-min-width: 350px;
+    -fx-min-width: 349px;
+    -fx-max-width: 349px;
 }
 
 #details-sidebar .scroll-pane {
     -fx-background-color: transparent;
-    -fx-max-width: 350px;
+    -fx-max-width: 349px;
     -fx-fit-to-width: true;
     -fx-hbar-policy: never;
     -fx-vbar-policy: never;
@@ -65,7 +66,7 @@
 }
 
 #details-sidebar .jfx-tab-pane {
-    -fx-max-width: 350px;
+    -fx-max-width: 349px;
 }
 
 #details-sidebar .jfx-tab-pane .tab-header-background {
